--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
   margin-right: 4%;
   padding: 1%;
   font-style: normal;
+  border-radius: 10%;
 }
 .pic{
   float:right;
@@ -23,4 +24,9 @@
   padding: 1%;
   width: 97%;
   clear: both;
+}
+
+.top{
+  text-align: center;
+  color: red;
 }
